[tool.poetry]
name = "mtachallenge"
version = "0.1.0"
description = ""
authors = ["Max <maxyuan85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = {version = "^1.26.0", python="^3.10,<3.13"}
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
